--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="title">Welcome!</h1>
+    <h1 id="title">Welcome to my place!</h1>
     <button id="changeButton">Click Me</button>
 
     <script src="script.js"></script>
